DT-1907 Fix spacing of commas in the address profile widget

--- a/css/widgets-profile.less
+++ b/css/widgets-profile.less
@@ -66,7 +66,6 @@
 			display: inline-block;
 			&:after {
 				content: ",";
-				margin-left: -0.3em;
 				display: inline-block;
 			}
 			&:last-of-type:after {
@@ -79,7 +78,7 @@
 	.map {
 		margin: 0.5em 0;
 	}
-	
+
 	// ProfileBar: Twitter
 	ul.twitter li{
 		padding-left: 40px;
@@ -87,7 +86,7 @@
 		.twitter-profile-pic {
 			width: 30px;
 			height: 30px;
-			margin-top: -15px;	
+			margin-top: -15px;
 		}
 	}
 
@@ -127,7 +126,7 @@
 			align-items: center;
 		}
 
-		fieldset {			
+		fieldset {
 			input.email {
 				background-color: lighten(@color-swatch1, 10%);
 				min-width: 180px;
@@ -149,14 +148,14 @@
 				-webkit-align-self: auto;
 				-ms-flex-item-align: auto;
 				align-self: auto;
-				
+
 				@media @mobile {
 					min-height: 28px;
 					line-height: 28px;
 					height: 28px;
 				}
 			}
-			
+
 			button.btn {
 				line-height: (@font-swatch7-font-size * 2.5);
 				// Flex child
@@ -173,7 +172,7 @@
 				-webkit-align-self: auto;
 				-ms-flex-item-align: auto;
 				align-self: auto;
-			
+
 				@media @mobile {
 					line-height: 28px;
 				}
@@ -198,7 +197,7 @@
 				width: 30px;
 				height: 30px;
 				margin: 0;
-				
+
 				&:hover {
 					text-decoration: none;
 					background-color: transparent;
@@ -215,7 +214,7 @@
 			content: '';
 			display: inline-block;
 			vertical-align: middle;
-			background-image: image('/images/ico-tel.png'); 
+			background-image: image('/images/ico-tel.png');
 			width: 18px;
 			height: 15px;
 			background-size: contain;
@@ -230,7 +229,7 @@
 			content: '';
 			display: inline-block;
 			vertical-align: middle;
-			background-image: image('/images/ico-mail.png'); 
+			background-image: image('/images/ico-mail.png');
 			width: 18px;
 			height: 13px;
 			background-size: contain;
